--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/zkamvar/toscr
 BugReports: https://github.com/zkamvar/toscr/issues
+Imports: 
+    xml2,
+    zip,
+    tools,
+    base64enc
+Suggests: 
+    testthat
+Remotes:
+  r-lib/testthat
+Config/testthat/edition: 3
+Config/testthat/parallel: false
